...
            return .month
        default:
            return .day
        }
    }

    private let actionSheetContent = ActionSheetContent(title: "Habit time period",
                                                        values: HabitTimePeriod.allCases.map { $0.title })

    private var isAddButtonDisabled: Binding<Bool> {
        Binding(get: {
            self.habitTitle.isEmpty
                || !self.scheduleDayViewModels.contains(where: { $0.isSelected })
...

                Spacer()

                CloseButton(action: closeAction)
            }

            HabitTextField(placeHolder: "Habit title",
                           inputText: $habitTitle)
                .frame(height: 40)

            KeyValueDatePickerView(keyText: "Creation date",
                                   selectedDate: $creationDate,
                                   isShowDatePicker:  $isShowDatePicker)
...
